vault_pgsql_sonarqube/sonarqube_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: platform
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /api/system/status
    alb.ingress.kubernetes.io/healthcheck-port: '9000'
    alb.ingress.kubernetes.io/success-codes: '200'
    
spec:
  ingressClassName: alb
  rules:
    - host: sonarqube.devopsproduction.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
